# dualmation

./: .gitignore  LICENSE  Makefile  README.md  checklists.md  main.py  pyproject.toml
configs/: default.yaml  evaluation.yaml  training.yaml
data/benchmarks/: gold_standard.json
docs/: api_reference.md  architecture.md  experiment_guide.md  getting_started.md  running_on_kaggle.md
manim_scripts/: gradient_descent.py
src/dualmation/: __init__.py  cli.py  pipeline.py
src/dualmation/compositor/: __init__.py  compositor.py
src/dualmation/diffusion/: __init__.py  visual_generator.py
src/dualmation/embeddings/: __init__.py  code_encoder.py  contrastive.py  visual_encoder.py
src/dualmation/evaluation/: auto_eval.py  metrics.py
src/dualmation/experiment/: __init__.py  config.py  logging_setup.py  metrics.py  reproducibility.py  tracker.py
src/dualmation/llm/: __init__.py  code_generator.py
src/dualmation/reward/: __init__.py  reward_model.py  world_model.py
src/dualmation/training/: collect_compilability.py  dataset.py  grpo.py  hitl.py  lora.py  ppo.py  sft.py  train_world_model.py
src/dualmation/utils/: colors.py
tests/: test_color_utils.py  test_compositor.py  test_dataset.py  test_embeddings.py  test_experiment.py  test_grpo.py  test_hitl.py  test_lora_init.py  test_metrics.py  test_multi_scene.py  test_ppo.py  test_reward.py  test_self_correction.py  test_sft_init.py  test_world_model_integration.py
